# x264_saliency_mod

./: CMakeLists.txt  README.md  x264.c  x264.h
common/: common.c  common.h  frame.c  frame.h  pixel.c  pixel.h
encoder/: analyse.c  encoder.c  ratecontrol.c  ratecontrol.h
filters/video/: source.c
input/: avs.c  ffms.c  input.h  lavf.c  raw.c  thread.c  timecode.c  y4m.c
